[tool.poetry]
name = "abz"
version = "0.1.0"
description = ""
authors = ["ekilyas"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
SQLAlchemy = "^1.4.42"
databases = "^0.6.1"
uvicorn = "^0.19.0"
factory-boy = "^3.2.1"
asyncpg = "^0.26.0"
typer = "^0.6.1"
sqladmin = "^0.7.0"
filedepot = "^0.8.0"
Pillow = "^9.3.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-jwt-auth = "^0.5.0"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
